--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site Settings
 title                    : "Pingjun Hong"
 description              : "First-year PhD student at University of Vienna"
-repository               : "PingjunHong/pingjun-hong.github.io"
+repository               : "PingjunHong/PingjunHong.github.io"
 google_scholar_stats_use_cdn : true
 
 # google analytics
