--- a/_config.yml
+++ b/_config.yml
@@ -21,14 +21,14 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 
 # Site Author
 author:
-  name             : "Lorem ipsum"
+  name             : "Pingjun Hong"
   avatar           : "images/android-chrome-512x512.png"
   bio              : "University of Vienna"
-  location         : "Beijing, China"
+  location         : "Vienna, Austria"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=YOUR_GOOGLE_SCHOLAR_ID"
-  email            : "Lorem@ipsum.com"
+  email            : "pingjun.hong@univie.ac.at"
   researchgate     :  # e.g., "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
@@ -37,7 +37,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : # e.g., "github username"
+  github           : "PingjunHong"
   google_plus      :
   keybase          :
   instagram        :
