--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 
 # Site Author
 author:
-  name             : "Pingjun Hong (洪娉君)"
+  name             : "Pingjun Hong"
   avatar           : "images/profile.JPG"
-  bio              : "University of Vienna"
+  bio              : "洪娉君"
   location         : "Vienna, Austria"
   employer         :
   pubmed           : 
