--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
-title                    : "Pingjun Hong （洪娉君）"
+title                    : "Pingjun Hong"
 description              : "First-year PhD student at University of Vienna"
 repository               : "PingjunHong/PingjunHong.github.io"
 google_scholar_stats_use_cdn : true
