--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,7 +10,7 @@ main:
     url: "/#-publications"
 
   - title: "Teaching"
-    url: "/#-teachings"
+    url: "/#-teaching"
 
   - title: "Educations"
     url: "/#-educations"
